# gablet

./: .gitignore  Cargo.toml  README.md  api.yaml
docker/: docker-compose copy.yml  docker-compose.yml
gablet_api/: Cargo.toml  README.md
gablet_api/migrations/2023-06-24-103856_create_users/: down.sql  up.sql
gablet_api/migrations/2023-06-26-144837_create_books/: up.sql
gablet_api/migrations/2023-07-27-165742_add_user_profile/: down.sql  up.sql
gablet_api/src/: credentials.rs  lib.rs  main.rs  models.rs  schema.rs
gablet_api/src/controllers/: profile.rs
gablet_api/src/models/: books.rs  login_form.rs  register_form.rs  simple_result.rs  user.rs
gablet_auth/: Cargo.toml  README.md
gablet_auth/migrations/2023-07-05-014224_add_uri_column_to_refresh_table/: down.sql
gablet_auth/migrations/2023-07-27-142325_add_additional_user_columns/: up.sql
gablet_auth/migrations/2023-07-27-155326_remove_profile_table/: down.sql  up.sql
gablet_auth/src/: controllers.rs  main.rs  models.rs  schema.rs
gablet_auth/src/controllers/: login.rs  logout.rs  refresh.rs  register.rs  validate.rs
gablet_auth/src/utils/: mail.rs  users.rs
gablet_auth_api/: Cargo.toml  README.md
gablet_auth_api/migrations/2023-06-28-054642_create_users/: down.sql  up.sql
gablet_auth_api/migrations/2023-06-28-054718_create_refresh/: up.sql
gablet_auth_api/migrations/2023-07-05-014224_add_uri_column_to_refresh_table/: up.sql
gablet_auth_api/migrations/2023-07-06-024808_rename_base_uri_to_source/: up.sql
gablet_auth_api/migrations/2023-07-10-193110_add_user_profile_table/: up.sql
gablet_auth_api/src/: controllers.rs  credentials.rs  forms.rs  lib.rs  models.rs  schema.rs
gablet_auth_api/src/controllers/: login.rs  refresh.rs  register.rs
gablet_auth_api/src/forms/: login_form.rs
gablet_auth_api/src/models/: login_result.rs  refresh_token_model.rs  user.rs
gablet_auth_api/src/utils/: mail.rs  password.rs  tokens.rs  users.rs
gablet_auth_server/: Cargo.toml
gablet_auth_server/src/: main.rs
gablet_cli/: Cargo.toml
gablet_cli/src/: main.rs
gablet_shared_api/: Cargo.toml
gablet_shared_api/src/: auth.rs  cancellation_token.rs  credentials.rs  errors.rs  kafka.rs  kafka_events.rs  kafka_thread.rs  lib.rs
gablet_shared_api/src/kafka/: kafka_events.rs  kafka_thread.rs  kafka_writer.rs
gablet_tokens/: Cargo.toml
gablet_tokens/src/: auth_token.rs  lib.rs  token_issuer.rs
gablet_tracking/: Cargo.toml
gablet_tracking/migrations/2023-07-28-065703_create_tracking_table/: down.sql  up.sql
gablet_tracking/src/: gablet_kafka.rs  main.rs  schema.rs
gablet_tracking/src/controllers/: metrics.rs
gablet_tracking/src/events/: tracking.rs
gablet_tracking/src/gablet_kafka/: kafka_thread.rs
gablet_tracking/src/models/: tracking.rs
gablet_users/: Cargo.toml
gablet_users/src/: auth_token.rs  lib.rs  refresh_token.rs  token_issuer.rs
gablet_users_api/: Cargo.toml
gablet_users_api/migrations/2023-07-06-024808_rename_base_uri_to_source/: down.sql
gablet_users_api/migrations/2023-07-27-142325_add_additional_user_columns/: down.sql
gablet_users_api/src/: main.rs  utils.rs
gablet_users_api/src/controllers/: login.rs  refresh.rs  register.rs  validate.rs
gablet_users_api/src/forms/: login_form.rs  register_form.rs
gablet_users_api/src/models/: login_result.rs  refresh_token_model.rs  requests.rs  responses.rs  user.rs
gablet_users_api/src/utils/: errors.rs  tokens.rs  users.rs
gablet_view/: README.md  env.d.ts  index.html  package-lock.json  package.json  sign-in.html  todolist.txt  vite.config.ts
gablet_view/src/: App.vue  i18n.ts  main.ts  router.ts
gablet_view/src/api/: api.ts  auth.ts  error.ts  fetchWithTimeout.ts  getApiSource.ts  profile.ts  requestAsJson.ts
gablet_view/src/assets/: main.css
gablet_view/src/components/: Footer.vue  Header.vue  NotesWriter.vue  RegisterForm.vue  SignInDialog.vue  SignInForm.vue
gablet_view/src/components/account/: ProfileIcon.vue
gablet_view/src/pages/: Register.vue
gablet_view/src/pages/account/: Profile.vue  SignIn.vue  Validate.vue
gablet_view/src/pages/home/: Home.vue
gablet_view/src/pages/sign-in/: SignIn.vue
gablet_view/src/stores/: useAuthStore.ts
gablet_view/src/utils/: auth.ts  errors.ts  strings.ts
