[package]
name = "gablet_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-login = { version = "0.5.0", features = ["postgres"] }
bcrypt = "0.14.0"
config = "0.13.3"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
lazy_static = "1.4.0"
mail-builder = "0.3.0"
mail-send = "0.4.0"
once_cell = "1.18.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_toml = "0.0.1"
tokio = { version = "1.28.2", features = ["net", "tokio-macros", "full"] }
tokio-rustls = "0.24.1"
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
rand = { version = "0.8.5", features = ["min_const_gen"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
async-sqlx-session = { version = "0.4.0", features = ["async_std", "pg"] }
