[package]
name = "gablet_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gablet_tokens = { path = "../gablet_tokens" }
gablet_shared_api ={ path = "../gablet_shared_api" }
axum = { version = "0.6.18", features = ["json", "multipart", "form", "headers", "query", "macros"] }
axum-extra = { version = "0.7.4", features = ["cookie", "cookie-signed"] }
bcrypt = "0.15.0"
config = "0.13.3"
diesel = { version = "2.1.0", features = ["postgres"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
mail-builder = "0.3.0"
mail-send = "0.4.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["net", "tokio-macros", "full"] }
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.1", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
