[package]
name = "gablet_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gablet_tokens = { path = "../gablet_tokens" }
gablet_shared_api = { path = "../gablet_shared_api" }
axum = { version = "0.6.18", features = ["json", "multipart", "form", "headers", "query", "macros"] }
axum-extra = { version = "0.8.0", features = ["cookie", "cookie-signed"] }
bcrypt = "0.15.0"
chrono = "0.4.26"
config = "0.13.3"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.0.0"
lazy_static = "1.4.0"
mail-builder = "0.3.0"
mail-send = "0.4.0"
serde = "1.0.164"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["net", "tokio-macros", "full"] }
tokio-rustls = "0.24.1"
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.1", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
urlencoding = "2.1.2"
metrics = "0.21.1"
axum-prometheus = "0.4.0"
