[package]
name = "gablet_auth_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
diesel = { version = "2.1.0", features = ["postgres"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
serde = "1.0.164"
gablet_users = { path = "../gablet_users" }
axum = { version = "0.6.18", features = ["json", "multipart", "form", "headers", "query", "macros"] }
lazy_static = "1.4.0"
config = "0.13.3"
tower-http = { version = "0.4.1", features = ["cors"] }
tower = { version = "0.4.13", features = ["tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
strum = { version = "0.25.0", features = ["derive"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
mail-send = "0.4.0"
mail-builder = "0.3.0"
tokio-rustls = "0.24.1"
tokio = { version = "1.29.1", features = ["net", "tokio-macros", "full"] }
jsonwebtoken = "8.3.0"
urlencoding = "2.1.2"
axum-extra = { version = "0.7.4", features = ["cookie", "cookie-signed"] }
