[package]
name = "gablet_shared_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["json", "multipart", "form", "headers", "query", "macros"] }
serde = { version = "1.0.164", features = ["derive"] }