[package]
name = "gablet_shared_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["json", "multipart", "form", "headers", "query", "macros"] }
serde = { version = "1.0.164", features = ["derive"] }
config = "0.13.3"
tracing = "0.1.37"
tokio = { version = "1.29.1", features = ["net", "tokio-macros", "full"] }
kafka = "0.10.0"
dashmap = "5.5.0"