[package]
name = "gablet_tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gablet_shared_api = { path = "../gablet_shared_api" }
gablet_tokens = { path = "../gablet_tokens" }
axum = { version = "0.6.18", features = ["json", "multipart", "form", "headers", "query", "macros"] }
chrono = "0.4.26"
config = "0.13.3"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "network-address"] }
diesel-async = { version = "0.3.1", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0.164", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["net", "tokio-macros", "full"] }
tokio-rustls = "0.24.1"
tower = { version = "0.4.13", features = ["tracing"] }
tower-http = { version = "0.4.1", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
ipnetwork = "0.20.0"
fast_uaparser = "2.0.1"
kafka = "0.9.0"
threadpool = "1.8.1"
dashmap = "5.5.0"
serde_json = "1.0.104"
